namespace FilmReview.Core.Dtos;

public class ActorDto
{
    public int ActorId { get; set; }
    public required string Name { get; set; }
}
